--- a/backend/vehicles-api/pom.xml
+++ b/backend/vehicles-api/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <java.version>21</java.version>
+        <resilience4j.version>2.2.0</resilience4j.version>
     </properties>
 
     <dependencies>
@@ -87,6 +88,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!-- ================================================================
+             Resilience4j — Circuit Breaker, Retry, Rate Limiter
+             Wraps MapsClient and PriceClient WebClient calls to prevent
+             cascade failures when downstream services are down.
+             ================================================================ -->
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-spring-boot3</artifactId>
+            <version>${resilience4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
     </dependencies>
     <dependencyManagement>
