--- a/backend/vehicles-api/src/main/resources/application.properties
+++ b/backend/vehicles-api/src/main/resources/application.properties
@@ -3,5 +3,35 @@ maps.endpoint=http://localhost:9191
 spring.application.name=vehicles-api
 server.port=8880
 server.servlet.context-path=/vehicles
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,circuitbreakers,circuitbreakerevents
 management.endpoint.health.show-details=always
+
+# ===========================================================================
+# Resilience4j ? Circuit Breaker Configuration
+# ===========================================================================
+
+# --- Maps Service Circuit Breaker ---
+# Opens after 50% of the last 5 calls fail. Stays open for 30s before half-opening.
+resilience4j.circuitbreaker.instances.mapsService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.mapsService.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.mapsService.sliding-window-size=5
+resilience4j.circuitbreaker.instances.mapsService.minimum-number-of-calls=3
+resilience4j.circuitbreaker.instances.mapsService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.mapsService.wait-duration-in-open-state=30s
+resilience4j.circuitbreaker.instances.mapsService.permitted-number-of-calls-in-half-open-state=2
+resilience4j.circuitbreaker.instances.mapsService.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.mapsService.slow-call-duration-threshold=5s
+resilience4j.circuitbreaker.instances.mapsService.slow-call-rate-threshold=80
+
+# --- Pricing Service Circuit Breaker ---
+# Same thresholds as Maps ? tune per service if traffic patterns differ.
+resilience4j.circuitbreaker.instances.pricingService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.pricingService.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.pricingService.sliding-window-size=5
+resilience4j.circuitbreaker.instances.pricingService.minimum-number-of-calls=3
+resilience4j.circuitbreaker.instances.pricingService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.pricingService.wait-duration-in-open-state=30s
+resilience4j.circuitbreaker.instances.pricingService.permitted-number-of-calls-in-half-open-state=2
+resilience4j.circuitbreaker.instances.pricingService.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.pricingService.slow-call-duration-threshold=5s
+resilience4j.circuitbreaker.instances.pricingService.slow-call-rate-threshold=80
