fix issues: 4.0 🔴 Not separated authRoutes 4.1 🔴 Hardcoded Credentials & Secrets 4.2 🔴 NGINX Runs as Root 4.3 🟡 No TLS Termination 4.4 🟡 Docker Compose Split Lacks Dependency Orchestration 4.5 🟡 Backend Services Expose No Ports but Have No Internal DNS Documentation 4.6 🟡 Ollama Commented Out — Implicit External Dependency 4.8 🟡 WebSocket CORS Wildcard in Spring Boot 4.9 🟢 Metrics Not Exported

--- a/backend/cloudapp/src/main/resources/application.properties
+++ b/backend/cloudapp/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=8099
 server.servlet.context-path=/cloudapp
 #DB - Postgres
+# FIX 4.1: Credentials read from environment variables (set in docker-compose)
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${DOCKER_HOST_IP:localhost}:5433/cloudappdb
-spring.datasource.username=websitemaster
-spring.datasource.password=local
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:websitemaster}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:local}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -15,6 +16,8 @@ kafka.topic=chat
 kafka.group.id=group-chat
 spring.kafka.producer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:${DOCKER_HOST_KAFKA_PORT:9093}
 spring.kafka.consumer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:${DOCKER_HOST_KAFKA_PORT:9093}
-spring.data.mongodb.uri=mongodb://websitemaster:local@${DOCKER_HOST_IP:localhost}:27018/cloudappdb?authSource=admin
-management.endpoints.web.exposure.include=health,info
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://websitemaster:local@${DOCKER_HOST_IP:localhost}:27018/cloudappdb?authSource=admin}
+# FIX 4.9: Expose Prometheus metrics endpoint via Actuator
+management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
+management.metrics.export.prometheus.enabled=true
