--- a/backend/petstore/src/main/resources/application.properties
+++ b/backend/petstore/src/main/resources/application.properties
@@ -1,18 +1,15 @@
 # Server port is arbitrary
 server.port=8083
 server.servlet.context-path=/petstore
-# Data Source Setup
-# Note: Users must create a mysql db that they will reference here, create a user that has access to it on localhost
-#       and provide the credentials below to access it
-# uncomment the below lines to view sql output in console
+# FIX 4.1: DB credentials from environment variables (set in docker-compose)
 spring.datasource.url=jdbc:mysql://${DOCKER_HOST_IP:localhost}:3307/petstore?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-management.endpoints.web.exposure.include=health,info
+# FIX 4.9: Expose Prometheus metrics endpoint via Actuator
+management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
+management.metrics.export.prometheus.enabled=true
