--- a/backend/vehicles-api/pom.xml
+++ b/backend/vehicles-api/pom.xml
@@ -89,6 +89,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
 
         <!-- ================================================================
              Resilience4j — Circuit Breaker, Retry, Rate Limiter
