--- a/backend/web-proxy/src/main/resources/application.properties
+++ b/backend/web-proxy/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8501
 server.servlet.context-path=/jiraproxy
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
+management.metrics.export.prometheus.enabled=true
