--- a/docker-compose-infrastructure.yml
+++ b/docker-compose-infrastructure.yml
@@ -1,13 +1,16 @@
 services:
   # ===========================================================================
-  # DATABASE SERVICES - Internal only
+  # DATABASE SERVICES
+  #
+  # FIX 4.1: All credentials externalized to .env (see .env.example).
+  #   Uses ${VAR:?error} syntax — compose fails fast if required vars missing.
   # ===========================================================================
   postgres:
     image: postgres:15
     environment:
-      POSTGRES_USER: websitemaster
-      POSTGRES_PASSWORD: local
-      POSTGRES_DB: cloudappdb
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5433:5432"
     volumes:
@@ -15,7 +18,7 @@ services:
     networks:
       - backend
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U websitemaster -d cloudappdb"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -28,15 +31,15 @@ services:
       - "./init-ml.sql:/docker-entrypoint-initdb.d/init-ml.sql"
       - postgres_ml:/var/lib/postgresql/data
     environment:
-      POSTGRES_USER: segmentmaster
-      POSTGRES_PASSWORD: segment
-      POSTGRES_DB: segmentationdb
+      POSTGRES_USER: ${POSTGRES_ML_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_ML_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_ML_DB}
     ports:
       - "5434:5432"
     networks:
       - backend
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U segmentmaster -d segmentationdb"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_ML_USER} -d $${POSTGRES_ML_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -51,8 +54,8 @@ services:
     volumes:
       - petstore:/var/lib/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: petstore
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     networks:
       - backend
     healthcheck:
@@ -69,9 +72,9 @@ services:
     ports:
       - '27018:27017'
     environment:
-      MONGO_INITDB_ROOT_USERNAME: websitemaster
-      MONGO_INITDB_ROOT_PASSWORD: local
-      MONGO_INITDB_DATABASE: cloudappdb
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DB}
     volumes:
       - mongo_chat:/data/db
     networks:
@@ -84,7 +87,7 @@ services:
     restart: unless-stopped
 
   # ===========================================================================
-  # MESSAGING SERVICES - Internal only
+  # MESSAGING SERVICES
   # ===========================================================================
   zookeeper:
     image: confluentinc/cp-zookeeper:7.2.3
@@ -129,44 +132,41 @@ services:
       start_period: 30s
     restart: unless-stopped
 
-  # Local install on Apple Silicon to use GPU acceleration
-  # brew install ollama
-  # Get a few thinking AND tools model https://ollama.com/search?c=tools&c=thinking
-  # ollama pull qwen3:1.7b
-  # ollama pull deepseek-r1:1.5b
-  # Get an embedding model for RAG at ollama.com/search?c=embedding
-  # ollama pull qwen3-embedding:4b
-  # ollama serve
-  #  # ===========================================================================
-  #  # LLM Provider - Internal only
-  #  # ===========================================================================
-  #  ollama:
-  #    container_name: ollama
-  #    build:
-  #      context: ./
-  #      dockerfile: Dockerfile_OLLAMA
-  #      args:
-  #        NEXT_PUBLIC_LLM_MODEL: 'qwen3:1.7b'
-  #        NEXT_PUBLIC_LLM_MODEL_EMBEDDING: 'qwen3-embedding:4b'
-  #    restart: unless-stopped
-  #    ports:
-  #      - 11434:11434
-  #    networks:
-  #      - backend
+  # ===========================================================================
+  # LLM Provider — Ollama via Docker profile
+  #
+  # For Apple Silicon GPU: install natively instead:
+  #   brew install ollama && ollama pull qwen3:1.7b && ollama serve
+  #
+  # For containerized (no GPU):
+  #   docker compose --profile ollama -f docker-compose-infrastructure.yml up -d
+  # ===========================================================================
+  ollama:
+    container_name: ollama
+    profiles: ["ollama"]
+    build:
+      context: ./
+      dockerfile: Dockerfile_OLLAMA
+      args:
+        NEXT_PUBLIC_LLM_MODEL: ${LLM_MODEL}
+        NEXT_PUBLIC_LLM_MODEL_EMBEDDING: ${LLM_MODEL_EMBEDDING}
+    restart: unless-stopped
+    ports:
+      - 11434:11434
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD-SHELL", "curl -sf http://localhost:11434/api/tags || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   # ===========================================================================
-  # OBSERVABILITY — Distributed Tracing
-  # ===========================================================================
-  # Jaeger all-in-one: collector (OTLP gRPC :4317, OTLP HTTP :4318),
-  #                    query/UI (:16686), agent (:6831)
-  # All Spring Boot services send traces via the OTel Java agent.
-  # The Flask ML pipeline sends traces via the OTel Python SDK.
-  # NGINX propagates the W3C traceparent header to all backends.
-  #
-  # Access the Jaeger UI at http://localhost:16686
+  # OBSERVABILITY — Distributed Tracing (Jaeger v2)
   # ===========================================================================
   jaeger:
-    image: jaegertracing/jaeger:latest
+    image: jaegertracing/jaeger:2.15.0
     container_name: jaeger
     restart: unless-stopped
     ports:
@@ -178,14 +178,60 @@ services:
     networks:
       - backend
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:16687/ || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:14269/ || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 10s
 
   # ===========================================================================
-  # AI ORCHESTRATION INFRASTRUCTURE - Internal only
+  # FIX 4.9: OBSERVABILITY — Metrics (Prometheus + Grafana)
+  #
+  # Prometheus scrapes Spring Boot Actuator /actuator/prometheus and Flask
+  # metrics endpoints. Grafana provides dashboards.
+  #
+  # Prometheus UI: http://localhost:9090
+  # Grafana UI:    http://localhost:3000 (admin / $GRAFANA_PASSWORD)
+  # ===========================================================================
+  prometheus:
+    image: prom/prometheus:v2.51.0
+    container_name: prometheus
+    restart: unless-stopped
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.retention.time=7d'
+    networks:
+      - backend
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost:9090/-/healthy || exit 1"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+
+  grafana:
+    image: grafana/grafana:11.0.0
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD}
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      prometheus:
+        condition: service_healthy
+    networks:
+      - backend
+
+  # ===========================================================================
+  # AI ORCHESTRATION INFRASTRUCTURE
   # ===========================================================================
   redis:
     image: redis:7-alpine
@@ -211,8 +257,8 @@ services:
     ports:
       - "27019:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin_password
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ABTEST_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ABTEST_PASSWORD}
       MONGO_INITDB_DATABASE: ai_orchestration
     volumes:
       - mongodb_data:/data/db
@@ -246,9 +292,8 @@ services:
       - backend
 
   # ===========================================================================
-  # APPLICATION SERVICES
+  # APPLICATION SERVICES (in infra compose)
   # ===========================================================================
-
   ai-orchestration-layer:
     build:
       context: ./ai-orchestration/ai-orchestration-layer
@@ -261,42 +306,45 @@ services:
     environment:
       PYTHONPATH: /app/src
       PYTHONUNBUFFERED: 1
-      ENVIRONMENT: ${ENVIRONMENT:-development}
+      ENVIRONMENT: ${ENVIRONMENT}
       OLLAMA_URL: http://host.docker.internal:11434
-      LLM_TEMPERATURE: ${LLM_TEMPERATURE:-0.7}
-      LLM_MAX_TOKENS: ${LLM_MAX_TOKENS:-2000}
-      CLOUDAPP_URL: ${CLOUDAPP_URL:-http://next-nginx-jwt:80/cloudapp}
-      PETSTORE_URL: ${PETSTORE_URL:-http://next-nginx-jwt:80/petstore}
-      VEHICLES_URL: ${VEHICLES_URL:-http://next-nginx-jwt:80/vehicles}
-      ML_URL: ${ML_URL:-http://next-nginx-jwt:80/mlops-segmentation}
-      POSTGRES_URL: postgresql://websitemaster:local@postgres:5432/cloudappdb
+      LLM_TEMPERATURE: ${LLM_TEMPERATURE}
+      LLM_MAX_TOKENS: ${LLM_MAX_TOKENS}
+      CLOUDAPP_URL: ${CLOUDAPP_URL}
+      PETSTORE_URL: ${PETSTORE_URL}
+      VEHICLES_URL: ${VEHICLES_URL}
+      ML_URL: ${ML_URL}
+      # FIX 4.1: Credentials from .env — no more hardcoded connection strings
+      POSTGRES_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       REDIS_URL: redis://redis:6379/0
-      REDIS_MAX_CONNECTIONS: ${REDIS_MAX_CONNECTIONS:-50}
-      MONGODB_URL: mongodb://orchestration_user:orchestration_pass@mongodb-abtest:27017/ai_orchestration?authSource=ai_orchestration
+      REDIS_MAX_CONNECTIONS: ${REDIS_MAX_CONNECTIONS}
+      MONGODB_URL: mongodb://${MONGO_ABTEST_ORCH_USER}:${MONGO_ABTEST_ORCH_PASSWORD}@mongodb-abtest:27017/ai_orchestration?authSource=ai_orchestration
       MONGODB_DATABASE: ai_orchestration
-      HTTP_TIMEOUT: ${HTTP_TIMEOUT:-10}
-      HTTP_MAX_CONNECTIONS: ${HTTP_MAX_CONNECTIONS:-100}
-      HTTP_MAX_KEEPALIVE: ${HTTP_MAX_KEEPALIVE:-20}
+      HTTP_TIMEOUT: ${HTTP_TIMEOUT}
+      HTTP_MAX_CONNECTIONS: ${HTTP_MAX_CONNECTIONS}
+      HTTP_MAX_KEEPALIVE: ${HTTP_MAX_KEEPALIVE}
       CHROMA_HOST: chromadb
       CHROMA_PORT: 8123
-      CHROMA_COLLECTION: ${CHROMA_COLLECTION:-user_documents}
+      CHROMA_COLLECTION: ${CHROMA_COLLECTION}
       CHROMA_PERSIST_DIR: /data/chroma
-      RAG_SEARCH_K: ${RAG_SEARCH_K:-3}
-      ENABLE_CHECKPOINTING: ${ENABLE_CHECKPOINTING:-true}
-      ENABLE_HITL: ${ENABLE_HITL:-true}
-      ENABLE_PARALLEL: ${ENABLE_PARALLEL:-true}
-      ENABLE_ERROR_HANDLING: ${ENABLE_ERROR_HANDLING:-true}
-      ENABLE_AB_TESTING: ${ENABLE_AB_TESTING:-true}
-      LOG_LEVEL: ${LOG_LEVEL:-INFO}
-      LOG_FORMAT: ${LOG_FORMAT:-json}
+      RAG_SEARCH_K: ${RAG_SEARCH_K}
+      ENABLE_CHECKPOINTING: ${ENABLE_CHECKPOINTING}
+      ENABLE_HITL: ${ENABLE_HITL}
+      ENABLE_PARALLEL: ${ENABLE_PARALLEL}
+      ENABLE_ERROR_HANDLING: ${ENABLE_ERROR_HANDLING}
+      ENABLE_AB_TESTING: ${ENABLE_AB_TESTING}
+      LOG_LEVEL: ${LOG_LEVEL}
+      LOG_FORMAT: ${LOG_FORMAT}
     volumes:
       - chroma_data:/data/chroma
       - ./logs:/app/logs
     depends_on:
       redis:
-        condition: service_started
+        condition: service_healthy
       chromadb:
-        condition: service_started
+        condition: service_healthy
+      mongodb-abtest:
+        condition: service_healthy
     healthcheck:
       test: [ "CMD-SHELL", "curl -f http://localhost:8700/health || exit 1" ]
       interval: 30s
@@ -307,7 +355,7 @@ services:
       - backend
 
   # ===========================================================================
-  # AI MONITOR DASHBOARD - Exposed to host (user-facing)
+  # AI MONITOR DASHBOARD
   # ===========================================================================
   ai-orchestration-monitor:
     build:
@@ -342,6 +390,10 @@ volumes:
     name: ai-orchestration-mongodb
   chroma_data:
     driver: local
+  prometheus_data:
+    name: prometheus-data
+  grafana_data:
+    name: grafana-data
 
 # ===========================================================================
 # NETWORKS - Must match docker-compose-app.yml
