--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -54,6 +54,9 @@ http {
     limit_req_zone $binary_remote_addr zone=auth_endpoints:10m rate=5r/s;
     limit_req_zone $binary_remote_addr zone=ai_endpoints:10m rate=10r/s;
 
+    # FIX: Ensure proper HTTP status for rate-limited requests
+    limit_req_status 429;
+
     # =========================================================================
     # OpenTelemetry — Request ID correlation
     # =========================================================================
@@ -84,6 +87,11 @@ http {
             allow 172.16.0.0/12;
             allow 10.0.0.0/8;
             deny all;
+        }
+
+        # FIX: Safe root response (prevents 500 on /)
+        location = / {
+            return 204;
         }
 
         # All application routes (shared with HTTPS server)
@@ -123,6 +131,11 @@ http {
             allow 172.16.0.0/12;
             allow 10.0.0.0/8;
             deny all;
+        }
+
+        # FIX: Safe root response (prevents 500 on /)
+        location = / {
+            return 204;
         }
 
         # All application routes (same as HTTP)
