--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ backend/*/target
 */.gitignore
 backend/ml-pipeline/data/
 backend/ml-pipeline/model/
-package-lock.json
 .next
 node_modules
 .env
@@ -39,3 +38,11 @@ next-env.d.ts
 
 .DS_Store
 **/.DS_Store
+
+test-results/*
+playwright-report/
+**/playwright-report/
+test-results/
+**/test-results/
+**/lcov-report/
+**/coverage/
