--- a/frontend/cloudapp-shell/package.json
+++ b/frontend/cloudapp-shell/package.json
@@ -8,7 +8,12 @@
     "start": "set NEXT_PRIVATE_LOCAL_WEBPACK=true && next start -p 5001",
     "format": "prettier --write .",
     "lint": "next lint",
-    "cypress:open": "cypress open"
+    "playwright:test": "NODE_PATH=./node_modules npx playwright test -c ../../playwright.config.ts",
+    "playwright:open": "NODE_PATH=./node_modules npx playwright test --ui --project=chromium -c ../../playwright.config.ts",
+    "playwright:open:all": "NODE_PATH=./node_modules npx playwright test --ui --project=chromium --project=firefox --project=webkit --workers=1 --retries=2 -c ../../playwright.config.ts",
+    "playwright:headed": "NODE_PATH=./node_modules npx playwright test --headed -c ../../playwright.config.ts",
+    "playwright:debug": "NODE_PATH=./node_modules npx playwright test --debug -c ../../playwright.config.ts",
+    "playwright:install": "npx playwright install chromium firefox webkit"
   },
   "dependencies": {
     "@ai-sdk/react": "3.0.67",
@@ -16,30 +21,37 @@
     "@emotion/styled": "^11.11.0",
     "@mui/x-data-grid": "^8.11.2",
     "@mui/x-tree-view": "^8.11.0",
+    "@types/leaflet": "^1.9.20",
     "ai": "^6.0.27",
+    "lucide-react": "^0.454.0",
     "next": "15.3.8",
     "next-themes": "^0.4.6",
-    "lucide-react": "^0.454.0",
     "ollama-ai-provider-v2": "^1.3.1",
     "react": "19.1.2",
-    "react-dom": "19.1.2",
     "react-datepicker": "^8.7.0",
+    "react-dom": "19.1.2",
+    "react-leaflet": "^5.0.0-rc.2",
     "sockjs-client": "^1.6.1",
     "webpack": "5.99.9",
-    "webstomp-client": "^1.2.6",
-    "@types/leaflet": "^1.9.20",
-    "react-leaflet": "^5.0.0-rc.2"
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@module-federation/enhanced": "0.0.0-next-20250618045528",
     "@module-federation/nextjs-mf": "0.0.0-next-20250618045528",
     "@module-federation/runtime": "0.0.0-next-20250618045528",
+    "@playwright/test": "^1.58.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@types/jest": "^30.0.0",
     "@types/node": "24.3.1",
     "@types/react": "^19.1.8",
-    "cypress": "14.5.4",
+    "axios-mock-adapter": "^2.1.0",
     "eslint": "^9.29.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.6",
     "typescript": "5.9.2"
   }
 }
